--- a/old-terapi.html
+++ b/old-terapi.html
@@ -228,12 +228,12 @@
       </div>
       <div class="container">
         <div class="supermenu-sub row">
-          <a class="supermenu-sub__item mb-3 ml-2" href="#">Лечение кариеса</a>
-          <a class="supermenu-sub__item mb-3 ml-2" href="#">Лечение пульпита</a>
-          <a class="supermenu-sub__item mb-3 ml-2" href="#">Реставрационные работы</a>
-          <a class="supermenu-sub__item mb-3 ml-2" href="#">Лечение периодонтита</a>
-          <a class="supermenu-sub__item mb-3 ml-2" href="#">Профилактика</a>
-          <a class="supermenu-sub__item mb-3 ml-2" href="#">Лечение слизистой оболочки полости рта</a>
+          <a class="supermenu-sub__item mb-3 mr-3" href="#">Лечение кариеса</a>
+          <a class="supermenu-sub__item mb-3 mr-3" href="#">Лечение пульпита</a>
+          <a class="supermenu-sub__item mb-3 mr-3" href="#">Реставрационные работы</a>
+          <a class="supermenu-sub__item mb-3 mr-3" href="#">Лечение периодонтита</a>
+          <a class="supermenu-sub__item mb-3 mr-3" href="#">Профилактика</a>
+          <a class="supermenu-sub__item mb-3 mr-3" href="#">Лечение слизистой оболочки полости рта</a>
         </div>
       </div>
     </div>
