--- a/old-ortopedia-metal.html
+++ b/old-ortopedia-metal.html
@@ -25,7 +25,7 @@
         </div>
         <div class="form-body">
           <input class="priyem-input" type="text" placeholder="Имя*">
-          <input class="priyem-input" type="text" placeholder="E-mail*">
+          <input class="priyem-input" type="text" placeholder="*">
           <label class="form-checker d-flex">
             <label class="checkbox-wrap">
               <input class="checkbox" type="checkbox" name="" id="">
@@ -143,7 +143,7 @@
     <nav class="nav d-flex align-content-center">
       <div class="container d-flex align-items-center">
         <div class="row flex-grow-1 justify-content-between d-flex">
-          <div class="col-8 col-sm-11 d-flex align-items-center nopadding">
+          <div class="col-11 col-sm-11 d-flex align-items-center nopadding">
             <ul class="menu d-flex flex-grow-1 ml-3 ml-md-0">
               <li class="is-active nested">
                 <a href="google.com"><span class="d-block d-lg-none">Взрослым</span> <span
@@ -280,7 +280,7 @@
     <!-- supermenu -->
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-8 nopadding page-content">
+        <div class="col-12 col-lg-8 nopadding page-content">
           <h1 class="title">Металлокерамические коронки и безметалловая керамика</h1>
           <div class="content-img">
             <img src="assets/image/tooths.jpg" alt="">
@@ -420,7 +420,7 @@
               <h2 class="sub-title">Задать вопрос специалисту</h2>
               <span class="">Напишите интересующий Вас вопрос, и мы ответим Вам в самое ближайшее время.</span>
               <input type="text" placeholder="Имя*">
-              <input type="text" placeholder="E-mail*">
+              <input type="text" placeholder="Телефон*">
               <textarea name="" id="" cols="30" rows="1" placeholder="Вопрос*"></textarea>
               <label class="form-checker d-flex">
                 <label class="checkbox-wrap">
@@ -434,7 +434,7 @@
           </div>
            <!-- callback modal -->
         </div>
-        <div class="col-md-4 d-none d-lg-block">
+        <div class="col-md-4 d-none d-lg-block p-0">
 
 
           <!-- callback footer -->
