--- a/old-ortopedia.html
+++ b/old-ortopedia.html
@@ -115,7 +115,7 @@
     <nav class="nav d-flex align-content-center">
       <div class="container d-flex align-items-center">
         <div class="row flex-grow-1 justify-content-between d-flex">
-          <div class="col-8 col-sm-11 d-flex align-items-center nopadding">
+          <div class="col-11 col-sm-11 d-flex align-items-center nopadding">
             <ul class="menu d-flex flex-grow-1 ml-3 ml-md-0">
               <li class="is-active nested">
                 <a href="google.com"><span class="d-block d-lg-none">Взрослым</span> <span
@@ -252,7 +252,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-8 nopadding page-content">
+        <div class="col-12 col-lg-8 nopadding page-content">
           <h1 class="title">Ортопедия</h1>
           <p class="text">Если зуб нельзя спасти или его уже нет, Вам пора к ортопеду.</p>
           <p class="text">Сегодня существует много вариантов восстановления отсутствующих зубов с помощью различных материалов, будь то керамика, металлокерамика или пластмасса. Протезирование зубов на сегодняшний день подразделяют на: микропротезирование, несъемное протезирование, съемное протезирование и протезирование на имплантах. Также мы осуществляем протезирование передних зубов</p>
@@ -361,7 +361,7 @@
 
 <!-- callback  modal -->
         </div>
-        <div class="col-md-4 d-none d-lg-block">
+        <div class="col-md-4 d-none d-lg-block p-0">
 
           <!-- callback footer -->
           <div class="callback">
