--- a/old-terapi.html
+++ b/old-terapi.html
@@ -116,7 +116,7 @@
     <nav class="nav d-flex align-content-center">
       <div class="container d-flex align-items-center">
         <div class="row flex-grow-1 justify-content-between d-flex">
-          <div class="col-8 col-sm-11 d-flex align-items-center nopadding">
+          <div class="col-11 col-sm-11 d-flex align-items-center nopadding">
             <ul class="menu d-flex flex-grow-1 ml-3 ml-md-0">
               <li class="is-active nested">
                 <a href="google.com"><span class="d-block d-lg-none">Взрослым</span> <span
@@ -237,9 +237,13 @@
         </div>
       </div>
     </div>
+    
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-8 nopadding page-content">
+      
+      <div class="row flex-column">
+        <a href="#" class="header-callback d-lg-none mb-3 mt-0">
+          Записаться на прием</a>
+        <div class="col-12 col-lg-8 nopadding page-content">
           <h1 class="title">Терапия</h1>
           <p class="text">Лечение кариеса, пульпита, периодонтита. Эстетическая реставрация, коррекция формы и цвета
             зубов, тоннельная препаровка, микропротезирование с использованием стекловолокна.</p>
@@ -313,7 +317,7 @@
               <h2 class="sub-title">Задать вопрос специалисту</h2>
               <span class="">Напишите интересующий Вас вопрос, и мы ответим Вам в самое ближайшее время.</span>
               <input type="text" placeholder="Имя*">
-              <input type="text" placeholder="E-mail*">
+              <input type="text" placeholder="Телефон*">
               <textarea name="" id="" cols="30" rows="1" placeholder="Вопрос*"></textarea>
               <label class="form-checker d-flex">
                 <label class="checkbox-wrap">
@@ -326,7 +330,7 @@
             </form>
           </div>
         </div>
-        <div class="col-md-4 d-none d-lg-block">
+        <div class="col-md-4 d-none d-lg-block p-0">
           <div class="callback">
             <form class="form d-flex">
               <div class="form-head">
