--- a/old-ortopedia-metal.html
+++ b/old-ortopedia-metal.html
@@ -281,6 +281,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-8 nopadding page-content">
+          <a href="#" class="header-callback d-lg-none mb-3 mt-0">
+            Записаться на прием</a>
           <h1 class="title">Металлокерамические коронки и безметалловая керамика</h1>
           <div class="content-img">
             <img src="assets/image/tooths.jpg" alt="">
