--- a/old-ortopedia.html
+++ b/old-ortopedia.html
@@ -253,6 +253,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-8 nopadding page-content">
+          <a href="#" class="header-callback d-lg-none mb-3 mt-0">
+            Записаться на прием</a>
           <h1 class="title">Ортопедия</h1>
           <p class="text">Если зуб нельзя спасти или его уже нет, Вам пора к ортопеду.</p>
           <p class="text">Сегодня существует много вариантов восстановления отсутствующих зубов с помощью различных материалов, будь то керамика, металлокерамика или пластмасса. Протезирование зубов на сегодняшний день подразделяют на: микропротезирование, несъемное протезирование, съемное протезирование и протезирование на имплантах. Также мы осуществляем протезирование передних зубов</p>
