--- a/old-terapi-leceniye.html
+++ b/old-terapi-leceniye.html
@@ -254,6 +254,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-8 nopadding page-content">
+          <a href="#" class="header-callback d-lg-none mb-3 mt-0">
+            Записаться на прием</a>
           <h1 class="title">Лечение кариеса</h1>
           <p class="text">Кариес – это процесс, который приводит к деминерализации зубной эмали, а после – к образованию кариозной полости.</p>
           <p class="text">Многие думают, что кариес – это когда в зубе образуется «дырка». Эту «дырку» нужно лечить, и хорошего в этом процессе мало. Потому предпочитают терпеть до последнего – до боли, флюсов и бессонных ночей. Сейчас стоматологи приветливы, бормашины современны, анестезия делается при малейших манипуляциях, поэтому нет причин оттягивать и бояться.</p>
