--- a/old-ortopedia.html
+++ b/old-ortopedia.html
@@ -347,7 +347,7 @@
               <h2 class="sub-title">Задать вопрос специалисту</h2>
               <span class="">Напишите интересующий Вас вопрос, и мы ответим Вам в самое ближайшее время.</span>
               <input type="text" placeholder="Имя*">
-              <input type="text" placeholder="E-mail*">
+              <input type="text" placeholder="Телефон">
               <textarea name="" id="" cols="30" rows="1" placeholder="Вопрос*"></textarea>
               <label class="form-checker d-flex">
                 <label class="checkbox-wrap">
@@ -374,7 +374,7 @@
               </div>
               <div class="form-body">
                 <input class="priyem-input" type="text" placeholder="Имя*">
-                <input class="priyem-input" type="text" placeholder="E-mail*">
+                <input class="priyem-input" type="text" placeholder="Телефон">
                 <label class="form-checker d-flex">
                   <label class="checkbox-wrap">
                     <input class="checkbox" type="checkbox" name="" id="">
