--- a/old-terapi-leceniye.html
+++ b/old-terapi-leceniye.html
@@ -355,7 +355,7 @@
               </div>
               <div class="form-body">
                 <input class="priyem-input" type="text" placeholder="Имя*">
-                <input class="priyem-input" type="text" placeholder="E-mail*">
+                <input class="priyem-input" type="text" placeholder="Телефон">
                 <label class="form-checker d-flex">
                   <label class="checkbox-wrap">
                     <input class="checkbox" type="checkbox" name="" id="">
