--- a/old-otdeleniye.html
+++ b/old-otdeleniye.html
@@ -13,6 +13,32 @@
 </head>
 
 <body>
+    <!-- modal zapisatsa -->
+<div class="modal-back"></div>
+<div class="modal">
+  <div class="callback">
+    <form class="form d-flex">
+      <div class="form-head">
+        <h2 class="sub-title">Запись на примем</h2>
+        <p>Оставьте заявку, и мы Вам перезвоним в течение часа.</p>
+      </div>
+      <div class="form-body">
+        <input class="priyem-input" type="text" placeholder="Имя*">
+        <input class="priyem-input" type="text" placeholder="*">
+        <label class="form-checker d-flex">
+          <label class="checkbox-wrap">
+            <input class="checkbox" type="checkbox" name="" id="">
+            <span class="checkbox-mask"></span>
+          </label>
+          <p class="checkbox-text">Согласен на обработку <a href="#">персональных данных</a></p>
+        </label>
+        <button class="btn btn-priyem" type="submit">Записаться</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!-- modal zapisatsa -->
 
   <!-- mobile menu -->
   <div class="mobile-menu">
