--- a/old-ortopedia-metal.html
+++ b/old-ortopedia-metal.html
@@ -142,30 +142,156 @@
     </div>
     <nav class="nav d-flex align-content-center">
       <div class="container d-flex align-items-center">
-        <div class="row flex-grow-1 justify-content-between d-flex">
-          <div class="col-11 col-sm-11 d-flex align-items-center nopadding">
+        <div class="row flex-grow-1 justify-content-between d-flex menu-wrap">
+          <div class="col-11 col-sm-11 d-flex align-items-center nopadding menu-wrap-inn">
             <ul class="menu d-flex flex-grow-1 ml-3 ml-md-0">
               <li class="is-active nested">
                 <a href="google.com"><span class="d-block d-lg-none">Взрослым</span> <span
                     class="d-none d-lg-block">Взрослое отделение</span></a>
+                    <div class="submenu">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Терапия</p>
+                              <a class="submenu-item-link" href="#">Реставрационные работы</a>
+                              <a class="submenu-item-link" href="#">Лечение кариеса</a>
+                              <a class="submenu-item-link" href="#">Лечение пульпита</a>
+                              <a class="submenu-item-link" href="#">Реставрационные работы</a>
+                              <a class="submenu-item-link" href="#">Лечение периодонтита</a>
+                              <a class="submenu-item-link" href="#">Профилактика</a>
+                              <a class="submenu-item-link" href="#">Лечение слизистой оболочки полости рта</a>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Ортопедия</p>
+                              <a class="submenu-item-link" href="#">Металлокерамические коронки и безметалловая керамика</a>
+                              <a class="submenu-item-link" href="#">Цельнолитые коронки из сплава недрагоценного металла</a>
+                              <a class="submenu-item-link" href="#">Цельнолитые культевые вкладки из сплава недрагоценного металла</a>
+                              <a class="submenu-item-link" href="#">Комбинированные протезы, бюгельные протезы</a>
+                              <a class="submenu-item-link" href="#">Съемное протезирование</a>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Имплантация в Копейске</p>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Хирургия в Копейске</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
               </li>
               <li class="nested">
                 <a href="#"><span class="d-block d-lg-none">Детям</span><span class="d-none d-lg-block">Детское
                     отделение</span></a>
+                    <div class="submenu">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Терапия</p>
+                              <a class="submenu-item-link" href="#">Реставрационные работы</a>
+                              <a class="submenu-item-link" href="#">Лечение кариеса</a>
+                              <a class="submenu-item-link" href="#">Лечение пульпита</a>
+                              <a class="submenu-item-link" href="#">Реставрационные работы</a>
+                              <a class="submenu-item-link" href="#">Лечение периодонтита</a>
+                              <a class="submenu-item-link" href="#">Профилактика</a>
+                              <a class="submenu-item-link" href="#">Лечение слизистой оболочки полости рта</a>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Ортопедия</p>
+                              <a class="submenu-item-link" href="#">Металлокерамические коронки и безметалловая керамика</a>
+                              <a class="submenu-item-link" href="#">Цельнолитые коронки из сплава недрагоценного металла</a>
+                              <a class="submenu-item-link" href="#">Цельнолитые культевые вкладки из сплава недрагоценного металла</a>
+                              <a class="submenu-item-link" href="#">Комбинированные протезы, бюгельные протезы</a>
+                              <a class="submenu-item-link" href="#">Съемное протезирование</a>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Имплантация в Копейске</p>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6">
+                            <div class="submenu-item">
+                              <img src="./assets/image/Icon/Terapiya.png" alt="">
+                              <p class="submenu-item-title">Хирургия в Копейске</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
               </li>
-              <li class="nested d-none d-md-block">
+              <li class="nested d-none d-md-flex">
                 <a href="#">О клинике</a>
+                <div class="submenu">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-12 col-md-6">
+                        <div class="submenu-item">
+                          <img src="./assets/image/Icon/Terapiya.png" alt="">
+                          <p class="submenu-item-title">Терапия</p>
+                          <a class="submenu-item-link" href="#">Реставрационные работы</a>
+                          <a class="submenu-item-link" href="#">Лечение кариеса</a>
+                          <a class="submenu-item-link" href="#">Лечение пульпита</a>
+                          <a class="submenu-item-link" href="#">Реставрационные работы</a>
+                          <a class="submenu-item-link" href="#">Лечение периодонтита</a>
+                          <a class="submenu-item-link" href="#">Профилактика</a>
+                          <a class="submenu-item-link" href="#">Лечение слизистой оболочки полости рта</a>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="submenu-item">
+                          <img src="./assets/image/Icon/Terapiya.png" alt="">
+                          <p class="submenu-item-title">Ортопедия</p>
+                          <a class="submenu-item-link" href="#">Металлокерамические коронки и безметалловая керамика</a>
+                          <a class="submenu-item-link" href="#">Цельнолитые коронки из сплава недрагоценного металла</a>
+                          <a class="submenu-item-link" href="#">Цельнолитые культевые вкладки из сплава недрагоценного металла</a>
+                          <a class="submenu-item-link" href="#">Комбинированные протезы, бюгельные протезы</a>
+                          <a class="submenu-item-link" href="#">Съемное протезирование</a>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="submenu-item">
+                          <img src="./assets/image/Icon/Terapiya.png" alt="">
+                          <p class="submenu-item-title">Имплантация в Копейске</p>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="submenu-item">
+                          <img src="./assets/image/Icon/Terapiya.png" alt="">
+                          <p class="submenu-item-title">Хирургия в Копейске</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </li>
-              <li class="d-none d-md-block">
+              <li class="d-none d-md-flex">
                 <a href="#">Отзывы</a>
               </li>
-              <li class="d-none d-lg-block">
+              <li class="d-none d-lg-flex">
                 <a href="#">Вопрос-Ответ</a>
               </li>
-              <li class="d-none d-lg-block">
+              <li class="d-none d-lg-flex">
                 <a href="#">Статьи</a>
               </li>
-              <li class="d-none d-lg-block">
+              <li class="d-none d-lg-flex">
                 <a href="#">Контакты</a>
               </li>
             </ul>
@@ -192,7 +318,7 @@
     <!-- flowers -->
     <div class="flower-right flower-first"></div>
     <div class="flower-right flower-second"></div>
-    <div class="flower-left d-none d-md-block"></div>
+    <div class="flower-left d-none d-md-flex"></div>
 <!-- flowers -->
 
 <!-- breadcrumbs -->
