--- a/old-terapi.html
+++ b/old-terapi.html
@@ -141,8 +141,8 @@
     </div>
     <nav class="nav d-flex align-content-center">
       <div class="container d-flex align-items-center">
-        <div class="row flex-grow-1 justify-content-between d-flex">
-          <div class="col-11 col-sm-11 d-flex align-items-center nopadding">
+        <div class="row flex-grow-1 justify-content-between d-flex menu-wrap">
+          <div class="col-11 col-sm-11 d-flex align-items-center nopadding menu-wrap-inn">
             <ul class="menu d-flex flex-grow-1 ml-3 ml-md-0">
               <li class="is-active nested">
                 <a href="google.com"><span class="d-block d-lg-none">Взрослым</span> <span
@@ -152,19 +152,19 @@
                 <a href="#"><span class="d-block d-lg-none">Детям</span><span class="d-none d-lg-block">Детское
                     отделение</span></a>
               </li>
-              <li class="nested d-none d-md-block">
+              <li class="nested d-none d-md-flex">
                 <a href="#">О клинике</a>
               </li>
-              <li class="d-none d-md-block">
+              <li class="d-none d-md-flex">
                 <a href="#">Отзывы</a>
               </li>
-              <li class="d-none d-lg-block">
+              <li class="d-none d-lg-flex">
                 <a href="#">Вопрос-Ответ</a>
               </li>
-              <li class="d-none d-lg-block">
+              <li class="d-none d-lg-flex">
                 <a href="#">Статьи</a>
               </li>
-              <li class="d-none d-lg-block">
+              <li class="d-none d-lg-flex">
                 <a href="#">Контакты</a>
               </li>
             </ul>
@@ -186,7 +186,7 @@
   <div id="wrap">
     <div class="flower-right flower-first"></div>
     <div class="flower-right flower-second"></div>
-    <div class="flower-left d-none d-md-block"></div>
+    <div class="flower-left d-none d-md-flex"></div>
 
     <div class="breadcrumb">
       <div class="container">
